--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ address {
 
 .flex {
     display: flex;
-    flex-direction: row;
+    /* flex-direction: column; */
 }
 
 .section {
@@ -101,6 +101,10 @@ address {
     font-weight: 500;
 }
 
+.header .mopen {
+    display: none;
+}
+
 .main_visual {
     position: relative;
 }
@@ -111,14 +115,17 @@ address {
 
 .main_visual .main_slide .itm01 {
     background: url(../img/main_renewal01.jpg)no-repeat center center/cover;
+    font-size: 0;
 }
 
 .main_visual .main_slide .itm02 {
     background: url(../img/main_renewal03.jpg)no-repeat center center/cover;
+    font-size: 0;
 }
 
 .main_visual .main_slide .itm03 {
     background: url(../img/main_renewal04.jpg)no-repeat center center/cover;
+    font-size: 0;
 }
 
 .main_visual .slogan {
@@ -141,6 +148,53 @@ address {
     font-size: 17px;
 }
 
+.main_visual .slick-dots {
+    position: absolute;
+    bottom: 90px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    z-index: 9999;
+}
+
+.main_visual .slick-dots>li {
+    display: inline-block;
+    padding: 5px 2px;
+}
+
+.main_visual .slick-dots>li button {
+    font-size: 0;
+    width: 20px;
+    height: 5px;
+    border-radius: 3px;
+    background: #777;
+    border: none;
+    outline: none;
+}
+
+.main_visual .slick-dots>li.slick-active button {
+    background: var(--mc);
+}
+
+.service {
+    padding: 50px 0;
+}
+
+.service .inner {
+    gap: 60px;
+}
+
+.service .inner>div {
+    flex: 1;
+}
+
+.service .inner h3 {
+    font-size: 18px;
+    line-height: 2;
+    border-bottom: 1px solid var(--gc);
+    margin: 0 0 20px 0;
+}
+
 .sub_page {}
 
 .sub_page .page {
@@ -160,10 +214,11 @@ address {
     overflow: hidden;
 }
 
-.sub_page article h3 {
+.sub_page article h2 {
     line-height: 60px;
     border-bottom: 1px solid var(--gc);
-    font-size: 18px;
+    font-size: 22px;
+    font-weight: 700;
     margin: 0 0 50px 0;
 }
 
@@ -174,15 +229,96 @@ address {
     min-height: 600px;
 }
 
+.sub_page .lnb {
+    margin: 0 0 40px 0;
+}
+
 .sub_page .lnb li {
     line-height: 40px;
     border-bottom: 1px solid var(--gc);
+    padding: 0 0 0 20px;
 }
 
 .sub_page .lnb li.on {
     background: var(--mc);
     color: var(--wc);
 }
+
+.customer h3 {
+    line-height: 2;
+    border-bottom: 1px solid var(--gc);
+    margin: 0 0 20px 0;
+}
+
+.customer .contact .tel a {
+    display: block;
+    font-size: 30px;
+    font-weight: 700;
+    margin: 0 0 10px 0;
+}
+
+.sub_content {
+    overflow: hidden;
+}
+
+.sub_content p {
+    line-height: 1.45;
+    margin: 0 0 20px 0;
+}
+
+.sub_content p.title {
+    line-height: 1.45;
+    margin: 0 0 30px 0;
+}
+
+.sub_content h3,
+.sub_content strong {
+    display: block;
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0 0 20px 0;
+    line-height: 1.3;
+}
+
+.sub_content h3::before {
+    content: "";
+    margin: 0 15px 0 0;
+    /* ::before은 인라인블럭이라서 좌우마진패딩 적용됨 */
+    width: 3px;
+    height: 3px;
+    background: var(--mc);
+    vertical-align: middle;
+}
+
+.sub_content figure {
+    margin: 0 0 50px 0;
+}
+
+.sub_content img {
+    max-width: 100%;
+}
+
+.sub_content .box {
+    display: flex;
+    gap: 30px;
+}
+
+.sub_content .box figure {
+    position: relative;
+}
+
+.sub_content .box figure::after {
+    content: attr(data-num);
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    background: var(--mc);
+    color: var(--wc);
+    font-size: 20px;
+    font-weight: 700;
+}
+
 
 .footer {
     border-top: 1px solid var(--gc);
@@ -201,4 +337,442 @@ address {
 
 .footer address {
     font-size: 15px;
+}
+
+
+
+
+
+
+/* 반응형 */
+@media (max-width: 768px) {
+    html {
+        --mc: #1428a0;
+        --gc: #ddd;
+        --wc: #f9f9f9;
+    }
+
+    body {
+        line-height: 1;
+        font-family: 'Roboto, Noto Sans KR', sans-serif;
+        font-size: 16px;
+        color: #444444;
+    }
+
+    a {
+        color: inherit;
+    }
+
+    ol {
+        list-style: none;
+    }
+
+    p {
+        line-height: 1.45;
+        word-break: keep-all;
+    }
+
+    figure {
+        /* 그누보드는 figure에 마진/패딩이 들어가서 없애주기 */
+        margin: 0;
+        padding: 0;
+    }
+
+    address {
+        font-style: normal;
+    }
+
+    /* slick 깜빡거리는 거 잡는 법 */
+    .slick-track,
+    .slick-list {
+        transition-delay: 100ms;
+    }
+
+    .inner {
+        width: auto;
+        margin: 0 auto;
+    }
+
+    .flex {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .section {
+        padding: 100px 0;
+    }
+
+    .section h2 {
+        font-size: 30px;
+        font-weight: 500;
+        margin: 0 0 20px 0;
+    }
+
+    .section p.title {
+        line-height: 1;
+        font-size: 17px;
+        margin: 0 0 40px 0;
+    }
+
+    .Wrap {}
+
+    .top_slogan {
+        border-bottom: 1px solid var(--gc);
+        line-height: 1.8;
+        font-size: 14px;
+    }
+
+    .top_slogan>ul {
+        justify-content: space-between;
+        flex-direction: row;
+        padding: 0 20px;
+    }
+
+    .header {
+        position: relative;
+        line-height: 100px;
+        border-bottom: 1px solid var(--gc);
+    }
+
+    .header h1 {
+        font-size: 0;
+        padding: 0 0 0 20px;
+    }
+
+    .header .flex {
+        justify-content: space-between;
+    }
+
+    .header .gnb>ul {
+        position: fixed;
+        top: 120px;
+        left: -100%;
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        line-height: 50px;
+        font-size: 18px;
+        font-weight: 500;
+        width: 100%;
+        height: 100vh;
+        background: #fff;
+        transition: left 0.5s;
+        z-index: 10000;
+    }
+
+    .header .gnb>ul.on {
+        left: 0;
+    }
+
+    .header .gnb>ul li {
+        padding: 0 0 0 20px;
+    }
+
+    .header .mopen {
+        position: fixed;
+        top: 60px;
+        right: 20px;
+        display: block;
+        z-index: 999;
+        font-size: 0;
+        width: 30px;
+        height: 30px;
+        background: transparent;
+        border-radius: 3px;
+    }
+
+    .header .mopen button {
+        border: none;
+        outline: none;
+        background: transparent;
+    }
+
+    .header .mopen::before,
+    .header .mopen::after {
+        content: "";
+        position: absolute;
+        left: 5px;
+        right: 5px;
+        height: 2px;
+        background: #333;
+    }
+
+    .header .mopen button::before,
+    .header .mopen button::after {
+        content: "";
+        position: absolute;
+        left: 5px;
+        right: 5px;
+        top: calc(50% - 1px);
+
+        height: 2px;
+        background: #333;
+    }
+
+    .header .mopen.no button::before {
+        transform: rotate(45deg);
+    }
+
+    .header .mopen.no button::after {
+        transform: rotate(-45deg);
+    }
+
+    .header .mopen.no::before,
+    .header .mopen.no::after {
+        opacity: 0;
+    }
+
+    .header .mopen::before {
+        top: 7px;
+    }
+
+    .header .mopen::after {
+        bottom: 7px;
+    }
+
+    .main_visual {
+        position: relative;
+    }
+
+    .main_visual .main_slide figure {
+        height: 700px;
+    }
+
+    .main_visual .main_slide .itm01 {
+        background: url(../img/main_renewal01.jpg)no-repeat center center/cover;
+        font-size: 0;
+    }
+
+    .main_visual .main_slide .itm02 {
+        background: url(../img/main_renewal03.jpg)no-repeat center center/cover;
+        font-size: 0;
+    }
+
+    .main_visual .main_slide .itm03 {
+        background: url(../img/main_renewal04.jpg)no-repeat center center/cover;
+        font-size: 0;
+    }
+
+    .main_visual .slogan {
+        position: absolute;
+        width: auto;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: var(--wc);
+        text-shadow: 0 0 2px #111;
+    }
+
+    .main_visual .slogan h2 {
+        font-size: 60px;
+        font-weight: 700;
+        margin: 0 0 30px 0;
+    }
+
+    .main_visual .slogan p {
+        font-size: 17px;
+    }
+
+    .main_visual .slick-dots {
+        position: absolute;
+        bottom: 90px;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+        z-index: 9999;
+    }
+
+    .main_visual .slick-dots>li {
+        display: inline-block;
+        padding: 5px 2px;
+    }
+
+    .main_visual .slick-dots>li button {
+        font-size: 0;
+        width: 20px;
+        height: 5px;
+        border-radius: 3px;
+        background: #777;
+        border: none;
+        outline: none;
+    }
+
+    .main_visual .slick-dots>li.slick-active button {
+        background: var(--mc);
+    }
+
+    .service {
+        padding: 50px 20px;
+    }
+
+    .service .inner {
+        gap: 60px;
+    }
+
+    .service .inner>div {
+        flex: 1;
+    }
+
+    .service .inner h3 {
+        font-size: 18px;
+        line-height: 2;
+        border-bottom: 1px solid var(--gc);
+        margin: 0 0 20px 0;
+    }
+
+    .service .center {
+        min-width: 480px;
+    }
+
+    .sub_page {}
+
+    .sub_page .inner {
+        padding: 0 20px;
+    }
+
+    .sub_page .page {
+        background: var(--mc);
+        color: var(--wc);
+        line-height: 40px;
+    }
+
+    .sub_page .page ol {
+        justify-content: flex-end;
+        flex-direction: row;
+        gap: 30px;
+    }
+
+    .sub_page article {
+        flex: 1;
+        padding: 40px 50px 40px 0;
+        overflow: hidden;
+    }
+
+    .sub_page article h2 {
+        line-height: 60px;
+        border-bottom: 1px solid var(--gc);
+        font-size: 22px;
+        font-weight: 700;
+        margin: 0 0 50px 0;
+    }
+
+    .sub_page aside {
+        width: 300px;
+        padding: 40px 0 0 40px;
+        border-left: none;
+        min-height: 600px;
+    }
+
+    .sub_page .lnb {
+        margin: 0 0 40px 0;
+    }
+
+    .sub_page .lnb li {
+        line-height: 40px;
+        border-bottom: 1px solid var(--gc);
+        padding: 0 0 0 20px;
+    }
+
+    .sub_page .lnb li.on {
+        background: var(--mc);
+        color: var(--wc);
+    }
+
+    .customer h3 {
+        line-height: 2;
+        border-bottom: 1px solid var(--gc);
+        margin: 0 0 20px 0;
+    }
+
+    .customer .contact .tel a {
+        display: block;
+        font-size: 30px;
+        font-weight: 700;
+        margin: 0 0 10px 0;
+    }
+
+    .sub_content {
+        overflow: hidden;
+    }
+
+    .sub_content p {
+        line-height: 1.45;
+        margin: 0 0 20px 0;
+    }
+
+    .sub_content p.title {
+        line-height: 1.3;
+        margin: 0 0 30px 0;
+    }
+
+    .sub_content h3,
+    .sub_content strong {
+        display: block;
+        font-size: 18px;
+        font-weight: 700;
+        margin: 0 0 20px 0;
+        line-height: 1.3;
+    }
+
+    .sub_content h3::before {
+        content: "";
+        margin: 0 15px 0 0;
+        /* ::before은 인라인블럭이라서 좌우마진패딩 적용됨 */
+        width: 3px;
+        height: 3px;
+        background: var(--mc);
+        vertical-align: middle;
+    }
+
+    .sub_content figure {
+        margin: 0 0 50px 0;
+    }
+
+    .sub_content img {
+        max-width: 100%;
+    }
+
+    .sub_content .box {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .sub_content .box figure {
+        position: relative;
+    }
+
+    .sub_content .box figure::after {
+        content: attr(data-num);
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background: var(--mc);
+        color: var(--wc);
+        font-size: 20px;
+        font-weight: 700;
+    }
+
+
+    .footer {
+        border-top: 1px solid var(--gc);
+        padding: 50px 0;
+        text-align: center;
+
+    }
+
+    .footer ul {
+        display: flex;
+        flex-direction: column;
+        margin: 0 0 20px 0;
+    }
+
+    .footer li {
+        margin: 0 0 10px 0;
+    }
+
+    .footer address {
+        font-size: 15px;
+    }
 }
